--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/premiumCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/premiumCars.html
@@ -2,9 +2,64 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Car Rental System</title>
+    <meta content="width=device-width initial-scale=1" name="viewport">
+    <link href="assests/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assests/style.css" rel="stylesheet">
+
+    <!-----------------------------fonts-------------------------------------->
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Convergence&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
+    <!------------------------------------------------------------------->
+
 </head>
 <body>
+
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light" style="height: 75px;background-color: #bdbdbd">
+        <!---------------------logo----------------------->
+        <nav class="navbar bg-body-tertiary">
+            <div class="container-fluid">
+                <img src="assests/images/logo.png" alt="Logo" width="60" height="60" class="d-inline-block align-text-top ms-1" style="border-radius: 40px;">
+                <label class="navbar-brand ms-3" style="font-family: 'Convergence', sans-serif;">Easy Car Rental PVT(Ltd)</label>
+                <label class="fw-bold ms-1">|</label>
+            </div>
+        </nav>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!---------------------nav bar items----------------------->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="userDashboard.html">Back</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+</header>
+
+
+<main></main>
 
 </body>
 </html>
