genarate directories to add car images in assests in useDashboard.html file in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/generalCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/generalCars.html
@@ -69,7 +69,8 @@
         <div class="row bg-success">
             <div class="col-2">
                 <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end">
-                    <nav class="nav nav-pills flex-column">
+                    <nav class="nav nav-pills flex-column position-fixed">
+                        <a class="nav-link" href="#all">All</a>
                         <a class="nav-link" href="#NoOfPassengers">No Of Passengers</a>
                         <nav class="nav nav-pills flex-column">
                             <a class="nav-link ms-3 my-1" href="#four">Four Passengers</a>
@@ -97,76 +98,105 @@
             </div>
             <div class="col-10">
                 <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-smooth-scroll="true" class="scrollspy-example-2" tabindex="0">
+                    <div id="all">
+                        <h4>All</h4>
+                        <div class="row row-cols-1 row-cols-md-3 g-4 bg-primary">
+                            <div class="col">
+                                <div class="card h-100">
+                                    <img src="..." class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                    <div class="card-body">
+                   +                     <h5 class="card-title">Suzuki Alto - Premium - Manual</h5>
+                                        <p class="card-text">We have 7 Suzuki Alto - Premium - Manual cars to offer you to rent.<br> Daily
+                                            Rate : 2500 <br> Monthly
+                                            Rate : Rs 64,350.00 </p>
+                                        <a href="#" class="btn btn-primary">More Details</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card h-100">
+                                    <img src="..." class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Card title</h5>
+                                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card h-100">
+                                    <img src="..." class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Card title</h5>
+                                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card h-100">
+                                    <img src="..." class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Card title</h5>
+                                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card h-100">
+                                    <img src="..." class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Card title</h5>
+                                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div id="NoOfPassengers">
                         <h4>No Of Passengers</h4>
-                        <p>...</p>
                     </div>
                     <div id="four">
                         <h5>Four Passengers</h5>
-                        <div class="row bg-primary">
-                            <div class="col-3 bg-warning">jtj</div>
-                            <div class="col-3">yjtjtyj</div>
-                            <div class="col-3">tyjtyj</div>
-                            <div class="col-3">tyjtyj</div>
-                        </div>
                     </div>
-                    <!--                        <div id="item-1-2">-->
-                    <!--                            <h5>Item 1-2</h5>-->
-                    <!--                            <p>...</p>-->
-                    <!--                        </div>-->
                     <div id="transmissionType">
                         <h4>Transmission Type</h4>
-                        <p>...</p>
                     </div>
                     <div id="manual">
                         <h5>Manual</h5>
                         <div class="row bg-primary">
-                            <div class="col-3 bg-warning">jtj</div>
-                            <div class="col-3">yjtjtyj</div>
-                            <div class="col-3">tyjtyj</div>
-                            <div class="col-3">tyjtyj</div>
                         </div>
                     </div>
                     <div id="auto">
                         <h5>Auto</h5>
-                        <p>...</p>
                     </div>
                     <div id="brand">
                         <h4>Brand</h4>
-                        <p>.</p>
                     </div>
                     <div id="suzuki">
                         <h5>Suzuki</h5>
-                        <p>...</p>
                     </div>
                     <div id="perodua">
                         <h5>Perodua</h5>
-                        <p>.. .</p>
                     </div>
                     <div id="toyota">
                         <h5>Toyota</h5>
-                        <p>.. .</p>
                     </div>
                     <div id="price">
                         <h4>Price</h4>
-                        <p>.</p>
                     </div>
                     <div id="fuel">
                         <h4>Fuel Type</h4>
-                        <p>...</p>
                     </div>
                     <div id="petrol">
                         <h5>Petrol</h5>
                         <div class="row bg-primary">
-                            <div class="col-3 bg-warning">jtj</div>
-                            <div class="col-3">yjtjtyj</div>
-                            <div class="col-3">tyjtyj</div>
-                            <div class="col-3">tyjtyj</div>
                         </div>
                     </div>
                     <div id="diesel">
                         <h5>Diesel</h5>
-                        <p>...</p>
                     </div>
                 </div>
             </div>
