--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/generalCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/generalCars.html
@@ -97,15 +97,15 @@
                 </nav>
             </div>
             <div class="col-10">
-                <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-smooth-scroll="true" class="scrollspy-example-2" tabindex="0">
+                <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-smooth-scroll="true" class="scrollspy-example-2 me-2" tabindex="0">
                     <div id="all">
                         <h4>All</h4>
                         <div class="row row-cols-1 row-cols-md-3 g-4 bg-primary">
                             <div class="col">
                                 <div class="card h-100">
-                                    <img src="..." class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                    <img src="assests/images/General_Cars/Suzuki_Alto-Premium-Manual/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
                                     <div class="card-body">
-                   +                     <h5 class="card-title">Suzuki Alto - Premium - Manual</h5>
+                                      <h5 class="card-title">Suzuki Alto - Premium - Manual</h5>
                                         <p class="card-text">We have 7 Suzuki Alto - Premium - Manual cars to offer you to rent.<br> Daily
                                             Rate : 2500 <br> Monthly
                                             Rate : Rs 64,350.00 </p>
@@ -115,41 +115,49 @@
                             </div>
                             <div class="col">
                                 <div class="card h-100">
-                                    <img src="..." class="card-img-top" alt="...">
+                                    <img src="assests/images/General_Cars/Suzuki_Alto-Premium-Manual/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        <h5 class="card-title">Suzuki Alto K10 - Auto</h5>
+                                        <p class="card-text">We have 8 Suzuki Alto K10 - Auto cars to offer you to rent.<br> Daily
+                                            Rate : 3000 <br> Monthly
+                                            Rate : Rs 71,390.00 </p>
+                                        <a href="#" class="btn btn-primary">More Details</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="card h-100">
-                                    <img src="..." class="card-img-top" alt="...">
+                                    <img src="assests/images/General_Cars/Suzuki_Alto-Premium-Manual/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        <h5 class="card-title">Suzuki Celerio - Auto</h5>
+                                        <p class="card-text">We have 5 Suzuki Celerio - Auto cars to offer you to rent.<br> Daily
+                                            Rate : 3300 <br> Monthly
+                                            Rate : Rs 77,220.00 </p>
+                                        <a href="#" class="btn btn-primary">More Details</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="card h-100">
-                                    <img src="..." class="card-img-top" alt="...">
+                                    <img src="assests/images/General_Cars/Suzuki_Alto-Premium-Manual/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        <h5 class="card-title">Perodua (Daihatsu) Axia - Auto</h5>
+                                        <p class="card-text">We have 2 Perodua (Daihatsu) Axia - Auto cars to offer you to rent.<br> Daily
+                                            Rate : 3800 <br> Monthly
+                                            Rate : Rs 90,200.00 </p>
+                                        <a href="#" class="btn btn-primary">More Details</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="card h-100">
-                                    <img src="..." class="card-img-top" alt="...">
+                                    <img src="assests/images/General_Cars/Suzuki_Alto-Premium-Manual/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        <h5 class="card-title">Toyota Prius C/ Aqua - Auto</h5>
+                                        <p class="card-text">We have 8 Toyota Prius C/ Aqua - Auto cars to offer you to rent.<br> Daily
+                                            Rate : 5000 <br> Monthly
+                                            Rate : Rs 110,330.00 </p>
+                                        <a href="#" class="btn btn-primary">More Details</a>
                                     </div>
                                 </div>
                             </div>
